# FilmNerd

./: .gitignore  README.md  debug_taste.py  main.py  pyproject.toml  start.sh
filmnerd-ui/: package-lock.json  package.json  tailwind.config.js
filmnerd-ui/src/app/: globals.css  layout.tsx
filmnerd-ui/src/app/browse/: page.tsx
filmnerd-ui/src/app/chat/: page.tsx
filmnerd-ui/src/app/log/: page.tsx
filmnerd-ui/src/app/taste/: page.tsx
filmnerd-ui/src/components/browse/: film-table.tsx  filter-panel.tsx
filmnerd-ui/src/components/chat/: chat-input.tsx  message-bubble.tsx  recommendation-card.tsx
filmnerd-ui/src/components/layout/: sidebar.tsx
filmnerd-ui/src/components/log/: annotation-preview.tsx  film-search.tsx  (+1 more)
filmnerd-ui/src/lib/: api.ts  types.ts  utils.ts
src/agent/: graph_retriever.py  qdrant_index.py  query_interpreter.py  recommender.py  run_recommender.py
src/annotation/: annotator.py  run_annotation.py  schema.py  store.py
src/api/: main.py  poster.py
src/api/routes/: chat.py  corpus.py  films.py  log.py  search.py  taste.py
src/dataset/: publisher.py  run_publisher.py
src/enrichment/: run_enrichment.py  store.py  tmdb.py
src/evaluation/: deepeval_suite.py  logger.py  run_eval.py  run_logger.py
src/graph/: builder.py  models.py  run_graph.py  store.py
src/ingestion/: models.py  parser.py  verify.py
src/monitoring/: dashboard.py  taste_dashboard.py
src/observability/: tracer.py
src/prediction/: engine.py  run_prediction.py  store.py
src/taste/: encoder.py  model.py  run_taste.py
tests/: cache_audit.ipynb  debug.py
(+3 files in other folders)
