[project]
name = "yesiamafilmnerd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "datasets>=4.8.4",
    "deepeval>=3.9.7",
    "instructor>=1.15.1",
    "langfuse>=4.3.1",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "networkx>=3.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]
